[metadata]
name = Airflow
summary = Airflow is a system to programmatically author, schedule and monitor data pipelines.
description-file = README.md
author = Apache Airflow PMC
author-email = dev@airflow.apache.org
license = Apache License, Version 2.0
license_files = 
	LICENSE
	licenses/*
	NOTICE

[bdist_wheel]
universal = 1

[files]
packages = airflow

[easy_install]

[mypy]
ignore_missing_imports = True

[mypy-airflow.migrations.*]
ignore_errors = True

[mypy-airflow._vendor.*]
ignore_errors = True

[mypy-airflow.contrib.auth.*]
ignore_errors = True

[egg_info]
tag_build = 
tag_date = 0

